예매하기, 디테일뷰

--- a/Moviepicker/WebContent/css/header.css
+++ b/Moviepicker/WebContent/css/header.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-body{ background: #000;margin: auto 0; font-family: 'Noto Sans KR';}
+body{ background: #fff;margin: auto 0; font-family: 'Noto Sans KR';}
 body{box-sizing: border-box; margin: 0 auto;}
 .header-box{
     background:#000;
