--- a/Moviepicker/WebContent/css/main.css
+++ b/Moviepicker/WebContent/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Bree+Serif&display=swap');
+body{ background:#000;}
 .content-box .top-content{ }
 .content-box .top-content p {color:#fff; font-family: 'Bree Serif'; font-size: 40px; text-align: center; 
 display: inline-block; position: relative;left: 420px; top: 50px; border-bottom: 5px solid; }
