--- a/Moviepicker/WebContent/css/moviedetail.css
+++ b/Moviepicker/WebContent/css/moviedetail.css
@@ -1,17 +1,49 @@
 @charset "UTF-8";
 
 body{ background: #fff; }
-.location{ border: 1px solid}
-.content-box{border: 1px solid red;}
-.content-box .detail-img {border: 1px solid blue;}
-.content-box .detail-img img{ }
+.location{  }
 
-.content-box .detail-info{border: 1px solid brown;}
-.content-box .detail-info .title { }
-.content-box .detail-info ul {border: 1px solid brown;}
-.content-box .detail-info ul li {float: left;}
-.content-box .detail-info .viewers { }
-.content-box .detail-info .reserve-btn{ border: 1px solid yellow;}
+
+.content-box{}
+.content-box .detail-img { width: 240px; margin:30px 0px; margin-right:40px; float: left;}
+.content-box .detail-img img{ width: 240px;}
+
+.content-box .detail-info { width: 100%; height: 400px; margin: 10px 0;}
+
+
+.content-box .detail-contents { width: 700px; float: right;  margin: 10px 0;}
+.content-box .detail-contents .orginal-title { color:#858585;}
+.content-box .detail-contents .detail-title { width: 300px; font-size: 35px; font-weight: 600;}
+.content-box .detail-contents ul { display: inline-grid; margin: 10px 0;}
+.content-box .detail-contents ul li { font-size: 20px; margin-bottom: 5px; width:100px;} 
+.content-box .detail-contents ul.content-value li { font-size: 20px; margin-bottom: 5px; width:500px; 
+	 overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+	 
+/* 누적관객 */
+.content-box .detail-contents .viewers { font-size: 20px; border-top: 1px solid silver; padding: 10px 0;}
+
+/* button */
+.content-box .detail-contents .reserve-btn{ border: 1px solid #037b94; display: block; width: 150px;height: 50px; 
+	text-align: center; font-size: 20px; line-height: 50px; margin: 10px 0; transition:all 0.9s, color 0.3s;
+	 }
+
+.content-box .detail-contents .reserve-btn a {  display:inline-block; color:#037b94; cursor: pointer;
+	width: 100%; height: 100%; }
+.content-box .detail-contents .reserve-btn:hover { color:#fff; }
+.content-box .detail-contents .reserve-btn a:hover{ color:#fff;}
+
+.hover1:hover{ box-shadow:150px 0 0 0 #037b94 inset;} 
+
+
+
+.content-box .detail-txt { width: 100%;  }
+.content-box .detail-txt .detail-title { height: 50px; font-size: 20px; margin:10px 0; border-bottom: 1px solid #eaeaea;
+	font-weight: 600; line-height: 50px; color:#333;}
+.content-box .detail-txt p {  margin: 20px 0; font-size: 15px;}
+.content-box .making-note {  }
+.content-box .making-note .detail-title{ height: 50px; font-size: 20px; margin:10px 0; border-bottom: 1px solid #eaeaea;
+	font-weight: 600; line-height: 50px; color:#333; }
+.content-box .making-note p {margin: 20px 0; font-size: 15px;}
 
 
 
