--- a/Moviepicker/WebContent/css/join.css
+++ b/Moviepicker/WebContent/css/join.css
@@ -1,1 +1,118 @@
 @charset "UTF-8";
+body {
+}
+div{
+  box-sizing: border-box;
+}
+#signup-container {
+    background-color: #fff;
+    position: relative;
+    top: 30px;
+    width: 400px;
+    height: 650px;
+    display: grid;
+    margin: 0 auto;
+    border: 1px solid #eaeaea;
+    box-shadow: 1px 1px 8px 1px #d8d8d8;
+}
+#signup-header-box p {
+  color: #555;
+  font-weight: 1000;
+  font-size: 20px;
+  padding: 10px 0 10px 10px;
+
+}
+#signup-container > div {
+  /* border: 1px solid yellowgreen; */
+  width: 100%;
+  height: 100%;
+}
+#signup-logo-box {
+  display: flex;
+  justify-content: center;
+  font-weight: 800;
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+   background: linear-gradient(to right,#3A1C71,#D76D77,#FFAF7B);
+    /* linear-gradient(to right,#3A1C71,#D76D77,#FFAF7B) */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.inputs {
+  display: block;
+  width: 250px;
+  height: 40px;
+  padding: 3px 30px 3px 30px;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 0;
+  border-radius: 40px;
+  background-color: #eaeaea;
+  color: #858585;
+  font-size: 17px;
+}
+
+
+input::placeholder{
+	color:#fff;
+}
+.inputs:focus,
+.buttons:focus {
+  outline: none;
+}
+.buttons {
+  cursor: pointer;
+  border: 0;
+  outline: none;
+  width: 90px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #333;
+  color: #bbb;
+  transition: .1s;
+}
+#submit-button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+#submit-button:hover {
+  background-color: #037b94;
+}
+.messages {
+  padding-left: 60px;
+}
+.warn {
+  color: crimson;
+}
+.correct {
+  color: yellowgreen;
+}
+.aTag {
+  text-decoration: none;
+  cursor: pointer;
+  color: #555;
+  font-size: 13px;
+}
+.aTag:visited {
+  text-decoration: none;
+  color: #777;
+}
+#signup-button {
+  display: inline-block;
+  margin-top: 15px;
+  transition: .1s;
+}
+#signup-button:hover {
+  color: #037b94;
+  text-decoration-line: underline;
+}
+#signup-footer-box {
+  text-align: center;
+  color: #aaa;
+}
+#logo {
+  width: 200px;
+}
