--- a/Moviepicker/WebContent/css/login.css
+++ b/Moviepicker/WebContent/css/login.css
@@ -1,31 +1,40 @@
 @charset "UTF-8";
 
-body {
-    margin: 0 auto;
-    background-color: #333;
-}
 div{
     box-sizing: border-box;
-    margin: auto;
-}
-#login-page {
-    position: relative;
-    top: 0;
-    left: 0;
 }
 #login-container {
-    background-color: #eaeaea;
-    top: 200px;
+       top: 100px;
     width: 400px;
-    height: 600px;
+    height: 650px;
     display: grid;
     grid-template-rows: 10% 20% 50% 20%;
-    margin-top: 30px;
+    margin: 0 auto;
+    border: 1px solid #eaeaea;
+    box-shadow: 1px 1px 11px 1px #ebebeb;
 }
 #login-container > div {
     /* border: 1px solid yellowgreen; */
     width: 100%;
     height: 100%;
+}
+#login-header-box p {
+    color: #555;
+    font-weight: 1000;
+    font-size: 20px;
+    padding: 10px 0 10px 10px;
+}
+#login-logo-box {
+       display: flex;
+    justify-content: center;
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    padding-top: 25px;
+    background: linear-gradient(to right, #e1eec3, #f05053);
+    /* linear-gradient(to right,#3A1C71,#D76D77,#FFAF7B) */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .inputs {
     display: block;
@@ -37,9 +46,12 @@ div{
     margin-bottom: 10px;
     border: 0;
     border-radius: 40px;
-    background-color: #555;
-    color: #bbb;
+    background-color: #eaeaea;
+    color: #858585;
     font-size: 17px;
+}
+input::placeholder{
+	color:#fff;
 }
 .inputs:focus,
 .buttons:focus {
@@ -97,4 +109,8 @@ div{
 }
 #login-footer-box {
     text-align: center;
+    color: #aaa;
+}
+#logo {
+    width: 200px;
 }
