--- a/Moviepicker/WebContent/css/main.css
+++ b/Moviepicker/WebContent/css/main.css
@@ -19,6 +19,29 @@ display: inline-block; position: relative;left: 420px; top: 50px; border-bottom:
 .content-box .movies .img img{ width:100%;  margin-bottom: 30px; }
 .content-box .movies .img .heart{ width:45%;height: 50px; line-height:50px; float: left; border: 1px solid #fff; text-align:center;
 border-radius: 4px;}
+.content-box .movies .about-movie{
+	width: 230px;
+    height: 332px;
+    position: absolute;
+    top: 0;
+    background: #000;
+    opacity: 0;
+    color: white;
+    font-size: 15px;
+    transition:all 0.4s ease-in-out;
+    
+}
+.content-box .movies .about-movie:hover{opacity: 0.8; }
+.content-box .movies .about-movie > div { padding:23px; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 12; /* 라인수 */
+    -webkit-box-orient: vertical;
+    word-wrap:break-word; 
+    height: 300px; }
+
+
 /* Movie Info */
 .content-box .movies .info{ width: 100%; height: 50px; color:#fff;}
 .content-box .movies .info span{ color:#fff; font-size: 12px; display: block;}
