--- a/Moviepicker/WebContent/css/moviedetail.css
+++ b/Moviepicker/WebContent/css/moviedetail.css
@@ -8,12 +8,12 @@ body{ background: #fff; }
 .content-box .detail-img { width: 240px; margin:30px 0px; margin-right:40px; float: left;}
 .content-box .detail-img img{ width: 240px;}
 
-.content-box .detail-info { width: 100%; height: 400px; margin: 10px 0;}
+.content-box .detail-info { width: 100%; height: 400px; margin: 60px 0; margin-bottom: 120px;}
 
 
 .content-box .detail-contents { width: 700px; float: right;  margin: 10px 0;}
 .content-box .detail-contents .orginal-title { color:#858585;}
-.content-box .detail-contents .detail-title { width: 300px; font-size: 35px; font-weight: 600;}
+.content-box .detail-contents .detail-title { width: 700px; font-size: 35px; font-weight: 600;}
 .content-box .detail-contents ul { display: inline-grid; margin: 10px 0;}
 .content-box .detail-contents ul li { font-size: 20px; margin-bottom: 5px; width:100px;} 
 .content-box .detail-contents ul.content-value li { font-size: 20px; margin-bottom: 5px; width:500px; 
@@ -36,13 +36,13 @@ body{ background: #fff; }
 
 
 
-.content-box .detail-txt { width: 100%;  }
-.content-box .detail-txt .detail-title { height: 50px; font-size: 20px; margin:10px 0; border-bottom: 1px solid #eaeaea;
-	font-weight: 600; line-height: 50px; color:#333;}
+.content-box .detail-txt { width: 100%; margin:40px 0; margin-bottom:100px; }
+.content-box .detail-txt .detail-title { height: 50px; font-size: 30px; margin:10px 0; border-bottom: 1px solid #eaeaea;
+	font-weight: 600; line-height: 50px; color:#ccc; margin-bottom:50px;}
 .content-box .detail-txt p {  margin: 20px 0; font-size: 15px;}
-.content-box .making-note {  }
-.content-box .making-note .detail-title{ height: 50px; font-size: 20px; margin:10px 0; border-bottom: 1px solid #eaeaea;
-	font-weight: 600; line-height: 50px; color:#333; }
+.content-box .making-note {margin:40px 0;  }
+.content-box .making-note .detail-title{ height: 50px; font-size: 30px; margin:10px 0; border-bottom: 1px solid #eaeaea;
+	font-weight: 600; line-height: 50px; color:#ccc; margin-bottom:50px; }
 .content-box .making-note p {margin: 20px 0; font-size: 15px;}
 
 
