--- a/Moviepicker/WebContent/css/main.css
+++ b/Moviepicker/WebContent/css/main.css
@@ -1,6 +1,23 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Bree+Serif&display=swap');
 body{ background:#000;}
+
+.menu-box{ /* display:none; */
+	height: 100%; background: rgba(255,255,255,0.88); width: 100%; z-index: 11; position: fixed; }
+.menu-box #close{font-size: 36px; width: 25px; float: right; margin-right: 40px; cursor:pointer;}
+.menu-box .title { text-align: center; font-size:30px; border-bottom: 5px solid;
+	width:150px; margin: 0 auto; margin-top: 130px; font-weight: 700;}
+.menu-box-content{     margin: 50px 150px;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    text-align: center;}
+.menu-box-content .category div{margin: 20px 0;}
+.menu-box-content .category .menu-depth1{font-size: 21px;
+    font-weight: 600;}
+.menu-box-content a{ cursor:pointer; color:#000;}
+.menu-box-content a:hover{ cursor:pointer; color:#037b93;}
+
+
 .content-box .top-content{ }
 .content-box .top-content p {color:#fff; font-family: 'Bree Serif'; font-size: 40px; text-align: center; 
 display: inline-block; position: relative;left: 420px; top: 50px; border-bottom: 5px solid; }
@@ -39,7 +56,7 @@ border-radius: 4px;}
     -webkit-line-clamp: 12; /* 라인수 */
     -webkit-box-orient: vertical;
     word-wrap:break-word; 
-    height: 300px; }
+    height: 308px; }
 
 
 /* Movie Info */
