--- a/Moviepicker/WebContent/css/header.css
+++ b/Moviepicker/WebContent/css/header.css
@@ -1,6 +1,23 @@
 @charset "UTF-8";
 body{ background: #fff;margin: auto 0; font-family: 'Noto Sans KR';}
 body{box-sizing: border-box; margin: 0 auto;}
+
+/* menu box */
+.menu-box{ display:none;
+	height: 100%; background: rgba(255,255,255,0.88); width: 100%; z-index: 11; position: fixed; }
+.menu-box #close{font-size: 36px; width: 25px; float: right; margin-right: 40px; cursor:pointer;}
+.menu-box .title { text-align: center; font-size:30px; border-bottom: 5px solid;
+	width:150px; margin: 0 auto; margin-top: 130px; font-weight: 700;}
+.menu-box-content{     margin: 50px 150px;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    text-align: center;}
+.menu-box-content .category div{margin: 20px 0;}
+.menu-box-content .category .menu-depth1{font-size: 21px;
+    font-weight: 600;}
+.menu-box-content a{ cursor:pointer; color:#000;}
+.menu-box-content a:hover{ cursor:pointer; color:#037b93;}
+/* content start */
 .header-box{
     background:#000;
     height: 160px;
